src/components/ui/PlanCard/plan-coverage/PlanCoverage.module.scss
.heading {
  color: #000000;
  font-size: 16px;
  padding: 10px 0;
  font-weight: bold;
}

.listContainer {
  padding: 10px;

  .addProviderBtn {
    width: fit-content;
    border: none;
    background-color: transparent !important;
    border-radius: 50px !important;
    color: #4178ff;
    margin: auto;
    svg path {
      stroke: #4178ff;
    }

    &:hover {
      background-color: white !important;
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    }
  }
}

.prescriptionContainer {
  box-shadow: inset 0px -1px 0px #dddddd;
  border-radius: 8px;
  background-color: white;
  margin-bottom: 10px;
}

.left {
  width: 100%;
  display: flex;
  gap: 5px;
  align-items: center;
  padding-left: 24px;
  border-bottom: 1px solid #00000029;
  padding-top: 10px;
  padding-bottom: 10px;

  &:last-child {
    border: none;
  }

  .data {
    gap: 3px;
    display: flex;
    flex-direction: column;

    .type {
      font-size: 14px;
    }
    .name {
      font-size: 16px;
    }
    .dose {
      font-size: 14px;
    }
  }
}
.editBtn {
  position: absolute;
  right: 40px;
  color: #4178ff;
  cursor: pointer;
  font-size: 14px;
  display: flex;
  align-items: center;
  gap: 3px;
  cursor: pointer;
  border-radius: 50px;
  padding: 5px 15px;

  &:hover {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  }
}
.secondaryColor {
  color: #717171;
}

.primaryColor {
  color: #052a63;
}
.itemsContainer {
  border-bottom: 1px solid #d4d4d4;
  display: flex;
  padding-bottom: 8px;

  @media screen and (max-width: 480px) {
    flex-direction: column;
  }

  .item {
    display: flex;
    gap: 5px;
    align-items: center;
    color: #0052ce;
    font-size: 16px;
    font-weight: bold;
    padding-right: 15px;
    margin-right: 20px;
    white-space: nowrap;
    border-right: 1px solid #d4d4d4;
    cursor: pointer;
    white-space: break-spaces;

    &:last-child {
      border-right: none;
      margin-right: 0;
      padding-right: 0;
    }

    @media screen and (max-width: 480px) {
      border-bottom: 1px solid #d4d4d4;
      border-right: none;
      padding: 10px 0;

      &:last-child {
        border-bottom: none;
        border-right: none;
        margin-right: 0;
        padding-right: 0;
      }
    }
  }
}

